--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -1,22 +1,132 @@
-#
-# This file is part of ***  M y C o R e  ***
-# See http://www.mycore.de/ for details.
-#
-# MyCoRe is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# MyCoRe is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with MyCoRe.  If not, see <http://www.gnu.org/licenses/>.
-#
+###################################################################################################
+#                                                                                                 #
+# basic application configuration                                                                 #
+#                                                                                                 #
+###################################################################################################
 
-# $Revision$ : $Date$
+# project name
+MCR.NameOfProject=DFI
+MIR.projectid.default=dfi
 
-MCR.NameOfProject=dfi
-MCR.Metadata.Languages=de,en
+# application base URL
+MCR.baseurl=https://repositorium.dfi.de/
+MIR.CanonicalBaseURL=https://repositorium.dfi.de/
+
+# supported languages
+MCR.Metadata.Languages=de,fr
+
+# Layout
+MIR.CustomLayout.JS=project.js
+MIR.EditorForms.CustomIncludes=%MIR.EditorForms.CustomIncludes%,xslStyle:editor/mir2xeditor:webapp:editor/editor-customization.xed
+
+
+###################################################################################################
+#                                                                                                 #
+# Access control                                                                                  #
+#                                                                                                 #
+###################################################################################################
+
+# Access keys
+MCR.ACL.AccessKey.Strategy.AllowedObjectTypes=mods,derivate
+
+# Access strategy
+MIR.Access.Strategy.Classifications=mir_access,state
+MCR.ACL.AccessKey.Strategy.AllowedSessionPermissionTypes=read,writedb
+
+# grant author all permissions while a document is in state new
+MCR.Access.Strategy.CreatorPermissions=read,writedb,view-derivate,deletedb
+
+# Allow the following user roles to search after all objects
+MIR.OwnerStrategy.AllowedRolesForSearch=admin,editor,submitter
+
+
+###################################################################################################
+#                                                                                                 #
+# Generic mail configuration for MCRMailer                                                        #
+#                                                                                                 #
+###################################################################################################
+
+# The server for outgoing mails
+MCR.Mail.Server=mailer.gbv.de
+
+# The mail protocol
+MCR.Mail.Protocol=smtp
+MCR.Mail.Sender=%MCR.mir-module.MailSender%
+MCR.Mail.Address=
+
+# The debug option
+MCR.Mail.Debug=false
+
+# Encoding for the mail
+MCR.Mail.Encoding=UTF-8
+
+# Number of send tries
+MCR.Mail.NumTries=3
+
+
+
+###################################################################################################
+#                                                                                                 #
+# MIR Citation settings                                                                           #
+#                                                                                                 #
+###################################################################################################
+
+# A comma separated list of styles, look here http://crosscite.org/citeproc/
+MIR.citationStyles=modern-language-association,apa,bibtex,modern
+MIR.defaultCitationStyle=modern-language-association
+
+# Export styles
+MCR.Export.CSL.Styles=%MIR.citationStyles%
+
+
+###################################################################################################
+#                                                                                                 #
+# Solr settings                                                                                   #
+#                                                                                                 #
+###################################################################################################
+
+MCR.Solr.Proxy.WhiteList=%MCR.Solr.Proxy.WhiteList%,/selectPublic,/findPublic
+MCR.Solr.NestedDocuments=true
+MIR.Rules.Solr.Protected.RequestHandler=find,select
+
+
+###################################################################################################
+#                                                                                                 #
+# Enrichment                                                                                      #
+#                                                                                                 #
+###################################################################################################
+
+MCR.MODS.EnrichmentResolver.DataSources.import=(Scopus PubMed IEEE CrossRef DataCite) OADOI GBV ZDB JOP
+
+
+###################################################################################################
+#                                                                                                 #
+# xMetaDissPlus settings                                                                          #
+#                                                                                                 #
+###################################################################################################
+
+MIR.xMetaDissPlus.diniPublType.classificationId=diniPublType2022
+MIR.dc.diniPublType.classificationId=diniPublType2022
+MIR.dc.ignoredClassificationIds=diniPublType
+
+
+###################################################################################################
+#                                                                                                 #
+# OAI Data Provider                                                                               #
+#                                                                                                 #
+###################################################################################################
+
+MCR.OAIDataProvider.OAI2.Sets.doc-type.URI=xslStyle:classification2sets:classification:metadata:2:children:diniPublType2022
+MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
+
+
+###################################################################################################
+#                                                                                                 #
+# Workflow configuration                                                                          #
+#                                                                                                 #
+###################################################################################################
+
+# MCR.Access.Strategy.SubmittedCategory=state:new
+# MCR.Metadata.Service.State.Category.Default=new
+MIR.Workflow.Menu=true
+MIR.Workflow.Box=true
