enable dfi specific pica2mods stylesheet

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -5,7 +5,7 @@
 ###################################################################################################
 
 # project name
-MCR.NameOfProject=DFI
+MCR.NameOfProject=dfi
 MIR.projectid.default=dfi
 
 # application base URL
@@ -38,6 +38,15 @@ MCR.Access.Strategy.CreatorPermissions=read,writedb,view-derivate,deletedb
 
 # Allow the following user roles to search after all objects
 MIR.OwnerStrategy.AllowedRolesForSearch=admin,editor,submitter
+
+
+###################################################################################################
+#                                                                                                 #
+# pica2mods configuration                                                                         #
+#                                                                                                 #
+###################################################################################################
+
+MCR.ContentTransformer.pica2mods.Stylesheet=xsl/pica2mods_dfi.xsl
 
 
 ###################################################################################################
