disable testEnvironment property

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -19,6 +19,8 @@ MCR.Metadata.Languages=de,fr
 MIR.CustomLayout.JS=project.js
 MIR.EditorForms.CustomIncludes=%MIR.EditorForms.CustomIncludes%,xslStyle:editor/mir2xeditor:webapp:editor/editor-customization.xed
 
+# this is a productive environment
+MIR.testEnvironment=false
 
 ###################################################################################################
 #                                                                                                 #
