DFI-45 URN-Vergabe einrichten

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -141,3 +141,14 @@ MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
 # MCR.Metadata.Service.State.Category.Default=new
 MIR.Workflow.Menu=true
 MIR.Workflow.Box=true
+
+##############################################################################
+#                                                                            #
+# URN configuration                                                          #
+#                                                                            #
+##############################################################################
+
+  MCR.URN.SubNamespace.Default.Prefix=urn:nbn:de:bsz:lg3-
+  MCR.PI.Generator.TypeYearCountURN.Namespace=urn:nbn:de:bsz:lg3-
+  MCR.PI.Generator.TypeYearCountURN.GeneralPattern=%MCR.PI.Generator.TypeYearCountURN.Namespace%$ObjectDate-$Count-
+  MCR.PI.Generator.TypeYearCountURN.DateFormat=yyyyMMdd
