Remove not existing csl style modern

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -83,7 +83,7 @@ MCR.Mail.NumTries=3
 ###################################################################################################
 
 # A comma separated list of styles, look here http://crosscite.org/citeproc/
-MIR.citationStyles=modern-language-association,apa,bibtex,modern
+MIR.citationStyles=modern-language-association,apa,bibtex
 MIR.defaultCitationStyle=modern-language-association
 
 # Export styles
