remove selectPublic and findPublic requestHandler configuration

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -96,8 +96,7 @@ MCR.Export.CSL.Styles=%MIR.citationStyles%
 #                                                                                                 #
 ###################################################################################################
 
-MCR.Solr.Proxy.WhiteList=%MCR.Solr.Proxy.WhiteList%,/selectPublic,/findPublic
-MCR.Solr.NestedDocuments=true
+MCR.Solr.Proxy.WhiteList=%MCR.Solr.Proxy.WhiteList%
 MIR.Rules.Solr.Protected.RequestHandler=find,select
 
 
