DFI-53 Thumbnailanzeige repariert

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -151,3 +151,9 @@ MIR.Workflow.Box=true
   MCR.PI.Generator.TypeYearCountURN.Namespace=urn:nbn:de:bsz:lg3-
   MCR.PI.Generator.TypeYearCountURN.GeneralPattern=%MCR.PI.Generator.TypeYearCountURN.Namespace%$ObjectDate-$Count-
   MCR.PI.Generator.TypeYearCountURN.DateFormat=yyyyMMdd
+
+
+###################################################################################################
+# Thumbnail Impl which uses first derivate were the rights to watch are granted                  #
+###################################################################################################
+MCR.IIIFImage.thumbnail=de.gbv.reposis.dfi.DFIThumbnailImageImpl
