DFI-54 workflow modul aktivieren

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -157,3 +157,9 @@ MIR.Workflow.Box=true
 # Thumbnail Impl which uses first derivate were the rights to watch are granted                  #
 ###################################################################################################
 MCR.IIIFImage.thumbnail=de.gbv.reposis.dfi.DFIThumbnailImageImpl
+
+###################################################################################################
+# Workflow configuration                                                                          #
+###################################################################################################
+MIR.Workflow.Menu=true
+
