--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -129,6 +129,17 @@ MIR.dc.ignoredClassificationIds=diniPublType
 MCR.OAIDataProvider.OAI2.Sets.doc-type.URI=xslStyle:classification2sets:classification:metadata:2:children:diniPublType2022
 MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
 
+MCR.OAIDataProvider.OAI2.RepositoryName=Repositorium - Deutsch Französisches Institut
+MCR.OAIDataProvider.OAI2.RepositoryIdentifier=repositorium.dfi.de
+MCR.OAIDataProvider.OAI2.AdminEmail=villinger@dfi.de
+MCR.OAIDataProvider.OAI2.RecordSampleID=dfi_mods_00224246
+
+# Set specifications
+MCR.OAIDataProvider.OAI2.Sets=doc-type,open_access,openaire,driver,ec_fundedresources,GENRE,ddc,xmetadissplus,urn
+MCR.OAIDataProvider.OAI2.Sets.doc-type.URI=xslStyle:classification2sets:classification:metadata:2:children:diniPublType2022
+MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
+MCR.OAIDataProvider.OAI2.MapSetToQuery.urn=mods.identifier:urn* AND mods.identifier:*104-* AND mods.identifier:*gbv*
+MCR.OAIDataProvider.OAI2.Sets.urn=webapp:oai/set_urn.xml
 
 ###################################################################################################
 #                                                                                                 #
