set urnset to dfi URNs

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -138,7 +138,7 @@ MCR.OAIDataProvider.OAI2.RecordSampleID=dfi_mods_00224246
 MCR.OAIDataProvider.OAI2.Sets=doc-type,open_access,openaire,driver,ec_fundedresources,GENRE,ddc,xmetadissplus,urn
 MCR.OAIDataProvider.OAI2.Sets.doc-type.URI=xslStyle:classification2sets:classification:metadata:2:children:diniPublType2022
 MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
-MCR.OAIDataProvider.OAI2.MapSetToQuery.urn=mods.identifier:urn* AND mods.identifier:*104-* AND mods.identifier:*gbv*
+MCR.OAIDataProvider.OAI2.MapSetToQuery.urn=mods.identifier:mods.identifier:urn\:nbn\:de\:bsz\:lg3-*
 MCR.OAIDataProvider.OAI2.Sets.urn=webapp:oai/set_urn.xml
 
 ###################################################################################################
