remove set xmetadissplus

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -135,7 +135,7 @@ MCR.OAIDataProvider.OAI2.AdminEmail=villinger@dfi.de
 MCR.OAIDataProvider.OAI2.RecordSampleID=dfi_mods_00224246
 
 # Set specifications
-MCR.OAIDataProvider.OAI2.Sets=doc-type,open_access,openaire,driver,ec_fundedresources,GENRE,ddc,xmetadissplus,urn
+MCR.OAIDataProvider.OAI2.Sets=doc-type,open_access,openaire,driver,ec_fundedresources,GENRE,ddc,urn
 MCR.OAIDataProvider.OAI2.Sets.doc-type.URI=xslStyle:classification2sets:classification:metadata:2:children:diniPublType2022
 MCR.OAIDataProvider.OAI2.Sets.doc-type.Classification=diniPublType2022
 MCR.OAIDataProvider.OAI2.MapSetToQuery.urn=mods.identifier:mods.identifier:urn\:nbn\:de\:bsz\:lg3-*
