DFI-add facet rfc5646, fivdfi, dateIssued

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -174,3 +174,14 @@ MCR.IIIFImage.thumbnail=de.gbv.reposis.dfi.DFIThumbnailImageImpl
 ###################################################################################################
 MIR.Workflow.Menu=true
 
+###################################################################################################
+# Facets                                                                                          # 
+###################################################################################################
+MIR.Response.Facet.rfc5646.ClassId=rfc5646
+MIR.Response.Facet.fivdfi.ClassId=fivdfi
+
+###################################################################################################
+# add dfi specific searchfields                                                                   #
+###################################################################################################
+MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-document%,dfi-solr.xsl
+
