DFI-5 add epusta Config

--- a/src/main/resources/config/reposis_dfi/mycore.properties
+++ b/src/main/resources/config/reposis_dfi/mycore.properties
@@ -185,3 +185,12 @@ MIR.Response.Facet.fivdfi.ClassId=fivdfi
 ###################################################################################################
 MCR.URIResolver.xslImports.solr-document=%MCR.URIResolver.xslImports.solr-document%,dfi-solr.xsl
 
+##############################################################################
+# MIR ePuSta                                                                 #
+##############################################################################
+# show ePuSta Statistics in metadata view ('show', 'hide')
+  MIR.ePuSta=show
+
+# URL of the ePuStaServer
+  MIR.ePuSta.providerURL=https://esx-141.gbv.de/dfi/rest-api
+
